Commit: Szablony stron html z podstawową obsługą kontrolera. Dodatkowo puste interfejsy repozytoriów.

--- a/Projekty/pokoje_srv/src/main/resources/templates/pokoje.html
+++ b/Projekty/pokoje_srv/src/main/resources/templates/pokoje.html
@@ -2,21 +2,27 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Lista pokoi</title>
+    <title>Zarządzanie pokojami</title>
 </head>
 <body>
-<h1>Welcome</h1>
+<h1>Zarządzanie pokojami - Pokoje</h1>
 <br>
 <h3>Lista pokoi:</h3>
 <br />
 <table border="1">
     <tr>
-        <td>Budynek</td>
         <td>Nr pokoju</td>
+        <td>Budynek</td>
+        <td>Telefon</td>
+        <td>Przeznaczenie</td>
+        <td>Ilość biurek</td>
     </tr>
     <tr th:each="pok:${pokojeList}">
-        <td th:text="${pok.budynek}">budynek</td>
         <td th:text="${pok.nr_pokoju}">nr pokoju</td>
+        <td th:text="${pok.budynek}">budynek</td>
+        <td th:text="${pok.nr_tel}">budynek</td>
+        <td th:text="${pok.przeznaczenie}">budynek</td>
+        <td th:text="${pok.ile_biurek}">budynek</td>
     </tr>
 </table>
 </body>
