Usuwanie pracowników, którzy przekroczyli termin zatrudnienia. Uwagi: - Usuwanie odbywa się podczas wywoływania tabeli Pracownicy, - Mały reformat nazewnictwa pól zatrudnienia pracownika

--- a/Projekty/pokoje_srv/src/main/resources/templates/pracownicy.html
+++ b/Projekty/pokoje_srv/src/main/resources/templates/pracownicy.html
@@ -26,8 +26,8 @@
         <td th:text="${prac.nazwisko}">nazwisko</td>
         <td th:text="${prac.nr_tel_kom}">nr_tel_kom</td>
         <td th:text="${prac.rodzaj_pracown}">rodzaj_pracown</td>
-        <td th:text="${prac.zatrudnienie_od}">zatrudnienie_od</td>
-        <td th:text="${prac.zatrudnienie_do}">zatrudnienie_do</td>
+        <td th:text="${prac.zatrudnienieOd}">zatrudnienieOd</td>
+        <td th:text="${prac.zatrudnienieDo}">zatrudnienieDo</td>
     </tr>
 </table>
 </body>
