--- a/Projekty/pokoje_srv/src/main/resources/templates/pracownicy.html
+++ b/Projekty/pokoje_srv/src/main/resources/templates/pracownicy.html
@@ -7,6 +7,7 @@
 <body>
 <h1>Zarządzanie pokojami - Pracownicy</h1>
 <br>
+<button action="#" th:action="@{/menu}">menu</button>
 <h3>Lista pracowników:</h3>
 <br />
 <table border="1">
