--- a/Projekty/pokoje_srv/src/main/resources/templates/menu.html
+++ b/Projekty/pokoje_srv/src/main/resources/templates/menu.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h2>Menu</h2>
-  <button action="#" th:action="@{/pokoje">Lista pokoi</button>
+  <button action="#" th:action="@{/pokoje}">Lista pokoi</button>
   <button action="#" th:action="@{/pracownicy}">Lista pracowników</button>
   <button action="#" th:action="@{/biurka}">Lista przypisań pracowników do pokoi</button>
 </body>
