--- a/Projekty/pokoje_srv/src/main/resources/templates/biurka.html
+++ b/Projekty/pokoje_srv/src/main/resources/templates/biurka.html
@@ -6,8 +6,10 @@
 </head>
 <body>
 <h1>Zarządzanie pokojami - Biurka</h1>
+<h2>przypisanie pracowników do pokoi</h2>
 <br>
-<button action="#" th:action="@{/menu}">menu</button>
+<button action="#" th:action="@{/menu}">menu</button><br/>
+<button action="#" th:action="@{/dodajBiurko}">dodaj przypisanie do pokoju</button>
 <h3>Lista pokoi:</h3>
 <br/>
 <table border="1">
