--- a/Projekty/pokoje_srv/src/main/resources/templates/pokoje.html
+++ b/Projekty/pokoje_srv/src/main/resources/templates/pokoje.html
@@ -7,7 +7,8 @@
 <body>
 <h1>Zarządzanie pokojami - Pokoje</h1>
 <br>
-<button action="#" th:action="@{/menu}">menu</button>
+<button action="#" th:action="@{/menu}">menu</button><br/>
+<button action="#" th:action="@{/dodajPokoj}">dodaj pokój</button>
 <h3>Lista pokoi:</h3>
 <br />
 <table border="1">
