--- a/Projekty/pokoje_srv/src/main/resources/templates/pracownicy.html
+++ b/Projekty/pokoje_srv/src/main/resources/templates/pracownicy.html
@@ -7,7 +7,8 @@
 <body>
 <h1>Zarządzanie pokojami - Pracownicy</h1>
 <br>
-<button action="#" th:action="@{/menu}">menu</button>
+<button action="#" th:action="@{/menu}">menu</button><br/>
+<button action="#" th:action="@{/dodajPracownika}">dodaj pracownika</button>
 <h3>Lista pracowników:</h3>
 <br />
 <table border="1">
